--- a/editor/src/components/Items/Items.less
+++ b/editor/src/components/Items/Items.less
@@ -1,5 +1,21 @@
-
-.content {
+.body {
   width: 100%;
   height: 100%;
+  background: #f2f5f7;
+  padding: 15px;
+
+  .content {
+    width: 100%;
+    height: 100%;
+    position: relative!important;
+
+    > div {
+      cursor: auto;
+    }
+
+    * {
+      user-select: none;
+    }
+  }
+
 }
