--- a/editor/src/index.less
+++ b/editor/src/index.less
@@ -1,6 +1,14 @@
+@header_height: 63px;
+@left_width: 220px;
+@right_width: 205px;
 
 html, body, :global(#root) {
   height: 100%;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 
@@ -8,9 +16,46 @@ html, body, :global(#root) {
   width: 100%;
   height: 100%;
 
-  > main {
+  > * {
+    float: left;
+  }
+
+  > header {
     width: 100%;
-    height: 100%;
+    height: @header_height;
+    background: #000000;
+  }
+
+  .left {
+    width: @left_width;
+    height: calc(~"100% - @{header_height}");
+    min-height: 600px;
+    background: #f2f5f7;
+  }
+
+  > main {
+    width: calc(~"100% - @{left_width} - @{right_width}");
+    height: calc(~"100% - @{header_height}");
+    min-height: 600px;
+    background: #dadfde;
+    padding: 10px 10px 46px 10px;
+    position: relative;
+
+    > footer {
+      width: 100%;
+      height: 46px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      background: #666666;
+    }
+  }
+
+  .right {
+    width: @right_width;
+    height: calc(~"100% - @{header_height}");
+    min-height: 600px;
+    background: #f0f0f0;
   }
 }
 
