初步完成控件列表

--- a/editor/src/components/Item/Item.less
+++ b/editor/src/components/Item/Item.less
@@ -1,9 +1,10 @@
-.resizable {
+.rnd {
 
   .content {
     width: 100%;
     height: 100%;
     cursor: move;
+    border: 1px dashed transparent;
 
     > div > div {
       display: none;
