--- a/editor/src/index.less
+++ b/editor/src/index.less
@@ -40,6 +40,7 @@ html, body, :global(#root) {
     background: #dadfde;
     padding: 10px 10px 46px 10px;
     position: relative;
+    box-shadow: 0 0 10px 5px #cfcfcf inset;
 
     > footer {
       width: 100%;
