初步完成容器及图表组件

--- a/editor/src/components/Item/Item.less
+++ b/editor/src/components/Item/Item.less
@@ -5,10 +5,6 @@
     height: 100%;
     cursor: move;
     border: 1px dashed transparent;
-
-    > div > div {
-      display: none;
-    }
   }
 
   &.active {
@@ -22,7 +18,7 @@
     }
   }
 
-  &.drag {
+  &.noneEvents {
     pointer-events: none;
   }
 }
