--- a/editor/src/components/LeftAside/LeftAside.less
+++ b/editor/src/components/LeftAside/LeftAside.less
@@ -10,13 +10,13 @@
     color: #666666;
   }
 
-  .baseTitle {
+  .subTitle {
     padding: 9px 20px;
     font-size: 15px;
     color: #666666;
   }
 
-  .base {
+  .list {
     margin: 0 12px;
     background: #e5eaeb;
     padding: 8px;
@@ -30,6 +30,20 @@
       border-radius: 5px;
       user-select: none;
       z-index: 9999;
+
+      .widget {
+        width: 100%;
+        height: 100%;
+        color: #528FDF;
+        font-size: 12px;
+        text-align: center;
+        padding-top: 5px;
+
+        .icon {
+          width: 100%;
+          font-size: 30px;
+        }
+      }
 
       &:hover {
         background: #eff4f5;
