初步完成右侧设置栏

--- a/editor/src/components/RightAside/RightAside.less
+++ b/editor/src/components/RightAside/RightAside.less
@@ -22,6 +22,37 @@
     }
   }
 
+  .id, .name {
+    width: 100%;
+    padding: 0 20px;
+    margin: 10px 0;
+    color: #5290de;
+    font-size: 14px;
+
+    input {
+      width: 100%;
+      border: none;
+      outline: none;
+      margin-top: 5px;
+      background: transparent;
+      text-align: center;
+      border-bottom: 1px solid #5190de;
+      font-family: "anticon";
+
+      &:-ms-input-placeholder, &::-webkit-input-placeholder {
+        color: #5290de;
+      }
+    }
+  }
+
+  .id {
+    cursor: pointer;
+
+    * {
+      cursor: pointer;
+    }
+  }
+
   .tree {
     padding: 0 20px;
 
