--- a/editor/src/components/RightAside/RightAside.less
+++ b/editor/src/components/RightAside/RightAside.less
@@ -53,6 +53,23 @@
     }
   }
 
+  .set {
+    display: flex;
+    padding: 10px 20px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .setButton {
+      width: 47%;
+      margin-top: 5px;
+      color: #5290de;
+
+      &:nth-child(1), &:nth-child(2) {
+        margin-top: 0;
+      }
+    }
+  }
+
   .tree {
     padding: 0 20px;
 
