初步完成右侧设置栏

--- a/editor/src/components/DataSetModal/DataSetModal.less
+++ b/editor/src/components/DataSetModal/DataSetModal.less
@@ -1,3 +1,11 @@
 
-.normal {
+.body {
+
+  .dimensionList, .conditionList {
+    width: 100%;
+  }
+}
+
+.dimensionListDropdown, .conditionListDropdown {
+  display: none;
 }
