--- a/editor/src/components/RightAside/RightAside.less
+++ b/editor/src/components/RightAside/RightAside.less
@@ -26,7 +26,7 @@
     width: 100%;
     padding: 0 20px;
     margin: 10px 0;
-    color: #5290de;
+    color: #528FDF;
     font-size: 14px;
 
     input {
@@ -36,11 +36,11 @@
       margin-top: 5px;
       background: transparent;
       text-align: center;
-      border-bottom: 1px solid #5190de;
+      border-bottom: 1px solid #528FDF;
       font-family: "anticon";
 
       &:-ms-input-placeholder, &::-webkit-input-placeholder {
-        color: #5290de;
+        color: #528FDF;
       }
     }
   }
@@ -62,7 +62,7 @@
     .setButton {
       width: 47%;
       margin-top: 5px;
-      color: #5290de;
+      color: #528FDF;
 
       &:nth-child(1), &:nth-child(2) {
         margin-top: 0;
