--- a/editor/src/components/Item/Item.less
+++ b/editor/src/components/Item/Item.less
@@ -5,6 +5,10 @@
     height: 100%;
     cursor: move;
     border: 1px dashed transparent;
+
+    > div:first-child > div {
+      position: absolute !important;
+    }
   }
 
   &.active {
