--- a/editor/src/components/EventSetModal/EventSetModal.less
+++ b/editor/src/components/EventSetModal/EventSetModal.less
@@ -1,60 +1,59 @@
-
+@import "../../assets/styles/tool";
 .body {
 
-  .dimensionRow {
-    border-bottom: 1px #dddddd solid;
-  }
+  .tree {
 
-  .dimensionLabel, .valueLabel {
-    height: 40px;
-    line-height: 40px;
-  }
+    :global {
+      .ant-tree-switcher {
+        display: none;
+      }
 
-  .dimensionList, .valueList {
-    width: 100%;
-    margin: 4px 0;
-
-    * {
-      border: none;
-      outline: none;
-      box-shadow: none;
-    }
-
-    li:not(:last-child) {
-      border: 0;
-      color: #ffffff;
-      background: linear-gradient(-45deg, transparent 5px, #528FDF 0);
-
-      span {
-        color: #ffffff;
+      .ant-tree-node-content-wrapper {
+        width: 100%;
       }
     }
-  }
 
-  .conditionList {
-    width: 100%;
-    height: 200px;
-    margin-top: 20px;
-
-    .condition {
-      height: 32px;
-      line-height: 32px;
-      text-align: right;
+    .node, .add {
       position: relative;
-      padding: 0 10px;
+      padding: 0 24px 0 10px;
 
-      input {
-        text-align: left;
-        border: none;
-        outline: none;
-        background: transparent;
-        box-shadow: none;
-        border-bottom: 1px #dddddd solid;
+      > div {
+        .nowrap;
+      }
+
+      > i {
+        width: 24px;
+        height: 24px;
+        line-height: 24px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: none;
+      }
+
+      &:hover > i {
+        display: inline-block;
       }
     }
-  }
-}
 
-.dimensionListDropdown, .valueListDropdown {
-  display: none;
+    .add > i {
+      display: inline-block;
+    }
+  }
+
+  .label, .value {
+    height: 32px;
+    line-height: 32px;
+    text-align: right;
+    position: relative;
+    padding: 0 10px;
+  }
+
+  .value {
+    text-align: left;
+
+    :global(.ant-select) {
+      width: 100%;
+    }
+  }
 }
