--- a/src/render.less
+++ b/src/render.less
@@ -2,9 +2,11 @@ html, body, :global(#root) {
   height: 100%;
   margin: 0;
 
-  .body {
+  > div {
     width: 100%;
     height: 100%;
+    padding: 0;
+    overflow: hidden;
   }
 }
 
