优化控件树，禁止左右滚动

--- a/src/components/RightAside/RightAside.less
+++ b/src/components/RightAside/RightAside.less
@@ -74,18 +74,12 @@
     padding: 0 20px;
 
     :global {
-      .ant-tree-child-tree {
-        .ant-tree-switcher {
-          display: none;
-        }
-
         .ant-tree-node-content-wrapper {
-          width: 100%;
+          width: calc(100% - 24px);
           .ant-tree-title > div {
             padding: 0 24px 0 10px;
           }
         }
-      }
     }
 
     .node {
