--- a/src/components/Bases/Container/Container.less
+++ b/src/components/Bases/Container/Container.less
@@ -1,4 +1,15 @@
+
 .body {
   width: 100%;
   height: 100%;
+  cursor: move;
+
+  .content {
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  .horizontal {
+    display: none;
+  }
 }
