初步实现缩放

--- a/src/editor.less
+++ b/src/editor.less
@@ -42,6 +42,11 @@ html, body, :global(#root) {
     position: relative;
     box-shadow: 0 0 10px 5px #cfcfcf inset;
 
+    .listContainer {
+      width: 100%;
+      height: 100%;
+    }
+
     > footer {
       width: 100%;
       height: 46px;
