--- a/src/render.less
+++ b/src/render.less
@@ -1,6 +1,11 @@
 html, body, :global(#root) {
   height: 100%;
   margin: 0;
+
+  .listContainer {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 * {
