--- a/src/components/ItemList/ItemList.less
+++ b/src/components/ItemList/ItemList.less
@@ -1,21 +1,4 @@
-.body {
+#listContainer {
   width: 100%;
   height: 100%;
-  background: #f2f5f7;
-  overflow: hidden;
-
-  .content {
-    width: 100%;
-    height: 100%;
-    position: relative!important;
-
-    > div {
-      cursor: auto;
-    }
-
-    * {
-      user-select: none;
-    }
-  }
-
 }
