实现控件宽高定位设置

--- a/src/components/Footer/Footer.less
+++ b/src/components/Footer/Footer.less
@@ -10,17 +10,23 @@
   color: #ffffff;
   font-size: 16px;
 
-  .number {
+  .numberCircle {
+    width: 70px;
     border-radius: 30px;
     overflow: hidden;
     margin: 0 20px 0 10px;
-
-    input {
-      text-align: center;
-    }
   }
 
   .resize {
+    margin: 0 20px 0 10px;
+  }
+
+  .placeholder {
+    flex: auto;
+  }
+
+  .numberSquare {
+    width: 60px;
     margin: 0 20px 0 10px;
   }
 }
