优化数据刷新 完成 css 设置

--- a/src/components/RightAside/RightAside.less
+++ b/src/components/RightAside/RightAside.less
@@ -103,5 +103,9 @@
         display: inline-block;
       }
     }
+
+    :global(.ant-tree-node-selected) .node .delete{
+      display: inline-block;
+    }
   }
 }
