--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -41,18 +41,31 @@
     color: #666666;
     font-size: 13px;
 
-    .paramSetting {
+    .paramSetting, .bgColorSetting, .refreshSetting {
       width: 84px;
+      height: 24px;
       float: right;
       margin: 8px 0;
     }
 
     .bgColorSetting {
-      width: 84px;
-      height: 24px;
-      float: right;
-      margin: 8px 0;
       box-shadow: 0 0 5px 1px #dddddd;
+    }
+
+    .refreshSetting {
+
+      input {
+        text-align: center;
+      }
+
+      :global(.ant-input-group-addon) {
+        padding: 0 5px;
+      }
+    }
+
+    .resizeSetting {
+      float: right;
+      margin: 11px 0;
     }
   }
 }
