完成页面参数设置模态窗

--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -40,6 +40,7 @@
     margin: 0;
     color: #666666;
     font-size: 13px;
+    cursor: default;
 
     .paramSetting, .bgColorSetting, .refreshSetting {
       width: 84px;
@@ -49,7 +50,8 @@
     }
 
     .bgColorSetting {
-      box-shadow: 0 0 5px 1px #dddddd;
+      border-radius: 4px;
+      cursor: pointer;
     }
 
     .refreshSetting {
