完成页面参数设置模态窗

--- a/src/components/ParamSetModal/ParamSetModal.less
+++ b/src/components/ParamSetModal/ParamSetModal.less
@@ -11,10 +11,19 @@
 
         .add {
           cursor: pointer;
+          user-select: none;
 
           &:hover {
             color: #5290de;
           }
+        }
+      }
+
+      .delete {
+        cursor: pointer;
+
+        &:hover {
+          color: #5290de;
         }
       }
     }
